@@ -54,9 +54,9 @@ public class FIMS_09_24_sortQuantityRequest {
         driver.findElement(By.xpath("//*[@id=\"menu_id_2868\"]")).click();
         Thread.sleep(1000);
 
-        // Assert to verify if the user is logged in successfully
-        Assert.assertEquals("User logged in successfully? ", "Portal / Stock Application / New Application", driver.getTitle().trim());
-        System.out.println("User logged in successfully.");
+        // Assert to verify if the user successfully access the correct page
+        Assert.assertEquals("Checking if user at the correct page", "Portal / Stock Application / New Application", driver.getTitle().trim());
+        System.out.println("User properly accessed to the New Application page!");
     }
 
     @Test
@@ -86,21 +86,30 @@ public class FIMS_09_24_sortQuantityRequest {
         List<WebElement> quantityRequestCells = driver.findElements(By.xpath("//*[@id=\"dt_store_item\"]/tbody/tr/td[3]"));
 
         // Log the list of items before sorting
-        List<String> originalQuantityRequestOrder = quantityRequestCells.stream().map(WebElement::getText).toList();
+        List<Integer> originalQuantityRequestOrder = quantityRequestCells
+                .stream()
+                .map(WebElement::getText)
+                .map(Integer::parseInt) // Convert to Integer
+                .collect(Collectors.toList());
+
         System.out.println("Original Quantity Request Order: " + originalQuantityRequestOrder);
 
         // Select Quantity Request column to trigger sorting
-        WebElement quantityRequestColumn = driver.findElement(By.xpath("//*[@id=\"dt_store_item\"]/thead/tr/th[3]"));
-        quantityRequestColumn.click();
+        WebElement quantityAvailableColumn = driver.findElement(By.xpath("//*[@id=\"dt_store_item\"]/thead/tr/th[3]"));
+        quantityAvailableColumn.click();
 
         // Wait for the table to be refreshed after sorting
         wait.until(ExpectedConditions.stalenessOf(quantityRequestCells.get(0)));
 
         // Get the Quantity Request values after sorting
         quantityRequestCells = driver.findElements(By.xpath("//*[@id=\"dt_store_item\"]/tbody/tr/td[3]"));
-        List<String> sortedQuantityRequestNumber = quantityRequestCells.stream().map(WebElement::getText).collect(Collectors.toList());
+        List<Integer> sortedQuantityRequestNumber = quantityRequestCells
+                .stream()
+                .map(WebElement::getText)
+                .map(Integer::parseInt) // Convert to Integer
+                .collect(Collectors.toList());
 
-        // Verify if the Quantity Request list is sorted in ascending order
+        // Verify if the Quantity Available list is sorted in ascending order
         boolean isSorted = Ordering.natural().isOrdered(sortedQuantityRequestNumber);
 
         // Assertion for the sorting result
